apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/mealie-recipes/mealie:v3.16.0
          volumeMounts:
            - mountPath: /app/data/
              name: mealie-app-data
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: 1Gi
      restartPolicy: Always
      volumes:
        - name: mealie-app-data
          persistentVolumeClaim:
            claimName: mealie-app-data
