apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP
  ports:
    - name: webserver
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: webserver
